refactor about page layout and restructure footer component

--- a/about.html
+++ b/about.html
@@ -90,8 +90,20 @@
         </div>
       </div>
     </header>
-    <main class="container mx-auto py-16 px-4">
-      <div class="grid grid-cols-1 lg:grid-cols-3 gap-12">
+    <main class="container mx-auto px-4 py-12">
+      <section class="mb-12">
+        <h2 class="text-3xl font-bold mb-6">Our History</h2>
+        <p class="text-lg text-gray-700">
+          The Golden State Warriors, established in 1946, have a rich history
+          filled with triumphs and challenges. From their early days in
+          Philadelphia to their current status as a powerhouse in the NBA, the
+          Warriors have consistently pushed the boundaries of excellence.
+        </p>
+        <p class="text-lg text-gray-700">
+          With a commitment to teamwork, innovation, and community, the Warriors
+          have become a symbol of resilience and success in professional sports.
+          </p>
+      <div class="grid grid-cols-1 lg:grid-cols-3 gap-12" style="margin-top: 2em;">
         <div class="lg:col-span-2">
           <div
             class="bg-white shadow-2xl rounded-2xl p-8 mb-8 animate-slide-up"
@@ -106,10 +118,10 @@
               NBA history, evolving from Philadelphia to a global phenomenon in
               San Francisco.
             </p>
-            <p class="text-gray-700 mt-4">
+            <p class="text-lg text-gray-700 mt-4">
               With a revolutionary approach to basketball, led by coach Steve
-              Kerr, the Warriors have pioneered the three-point era, securing 8
-              NBA titles, including 2022.
+              Kerr, the Warriors have pioneered the three-point era, securing 7
+              NBA titles.
             </p>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mt-8">
               <div class="bg-gray-50 p-6 rounded-lg shadow">
@@ -119,11 +131,11 @@
                 <ul class="list-none space-y-2">
                   <li>
                     <i class="fas fa-check-circle text-green-500 mr-2"></i>NBA
-                    Champions (2015, 2017, 2018, 2022)
+                    Champions<br>(1947, 1956, 1975, 2015, 2017, 2018, 2022)
                   </li>
                   <li>
                     <i class="fas fa-check-circle text-green-500 mr-2"></i
-                    >Western Conference Leaders (2015-2019, 2022, 2025)
+                    >Western Conference Leaders<br>(1975, 2015-2019, 2022, 2025)
                   </li>
                   <li>
                     <i class="fas fa-check-circle text-green-500 mr-2"></i
@@ -138,174 +150,116 @@
                 <ul class="list-none space-y-2">
                   <li>
                     <i class="fas fa-basketball-ball text-gold mr-2"></i>Record:
-                    45-15
+                    48-34
                   </li>
                   <li>
                     <i class="fas fa-basketball-ball text-gold mr-2"></i>Points
-                    Per Game: 120.2
+                    Per Game: 113.8
                   </li>
                   <li>
                     <i class="fas fa-basketball-ball text-gold mr-2"></i
-                    >Three-Point %: 40.1%
+                    >Three-Point %: 36.6%
                   </li>
                 </ul>
               </div>
             </div>
-            <h3 class="text-2xl font-bold text-warriors-navy mt-8 mb-4">
-              Philosophy
-            </h3>
-            <ul class="list-disc pl-6 text-gray-700">
-              <li>
-                <strong>Strength in Numbers</strong>: Teamwork fuels our
-                victories
-              </li>
-              <li>
-                <strong>Innovation</strong>: Redefining basketball with bold
-                strategies
-              </li>
-              <li><strong>Community</strong>: Empowering the Bay Area</li>
-            </ul>
-          </div>
+            </div>
           <div
-            class="bg-white shadow-2xl rounded-2xl p-8 animate-slide-up delay-200"
+            class="bg-white shadow-2xl rounded-2xl p-8 animate-slide-up"
           >
             <h2
               class="text-3xl font-poppins font-bold mb-6 text-warriors-navy border-b-4 border-gold pb-2"
             >
-              Leadership
+              Our Community
             </h2>
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
-              <div class="flex items-center">
-                <img
-                  src="https://images.unsplash.com/photo-1516321310765-79e44b9e30c3"
-                  alt="Steve Kerr"
-                  class="w-24 h-24 rounded-full object-cover mr-4"
-                />
-                <div>
-                  <h4 class="font-bold text-warriors-navy">Steve Kerr</h4>
-                  <p class="text-gray-600">Head Coach</p>
-                  <p class="text-sm text-gray-500">
-                    A visionary leader with 9 NBA championships as a player and
-                    coach.
-                  </p>
-                </div>
-              </div>
-              <div class="flex items-center">
-                <img
-                  src="https://images.unsplash.com/photo-1519085360753-af0119f7cbe7"
-                  alt="Bob Myers"
-                  class="w-24 h-24 rounded-full object-cover mr-4"
-                />
-                <div>
-                  <h4 class="font-bold text-warriors-navy">Bob Myers</h4>
-                  <p class="text-gray-600">
-                    President of Basketball Operations
-                  </p>
-                  <p class="text-sm text-gray-500">
-                    Architect of the Warriors' dynasty through strategic roster
-                    building.
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div>
-          <div
-            class="bg-white shadow-2xl rounded-2xl p-8 mb-8 animate-slide-up"
-          >
-            <h3 class="text-xl font-bold text-warriors-navy mb-4">
-              Chase Center
-            </h3>
-            <img
-              src="https://images.unsplash.com/photo-1591182223207-1b7171c308c2"
-              alt="Chase Center"
-              class="w-full h-48 object-cover rounded-lg mb-4"
-            />
-            <p class="text-gray-700">
-              Our home since 2019, Chase Center is a 18,064-seat arena designed
-              for fans and players alike.
+            <p class="text-lg text-gray-700">
+              The Warriors are not just a team; they are a community. Through
+              various initiatives, they give back to the Bay Area, supporting
+              education, health, and youth programs.
             </p>
-            <ul class="list-none mt-4">
-              <li>
-                <i class="fas fa-map-marker-alt text-gold mr-2"></i>1 Warriors
-                Way, San Francisco
-              </li>
-              <li><i class="fas fa-phone text-gold mr-2"></i>(415) 555-7890</li>
-            </ul>
-          </div>
-          <div
-            class="bg-white shadow-2xl rounded-2xl p-8 animate-slide-up delay-200"
-          >
-            <h3 class="text-xl font-bold text-warriors-navy mb-4">
-              Community Impact
-            </h3>
-            <p class="text-gray-700">We uplift our community through:</p>
-            <ul class="list-disc pl-6 text-gray-700">
-              <li>Youth basketball clinics</li>
-              <li>Charity drives</li>
-              <li>Education programs</li>
-            </ul>
-            <a
-              href="#"
-              class="btn border-warriors-navy text-warriors-navy mt-4 rounded-full hover:bg-warriors-navy hover:text-white"
-              >Learn More</a
-            >
+            <p class="text-lg text-gray-700 mt-4">
+              Their commitment to social responsibility is as strong as their
+              dedication to winning on the court.
+            </p>
           </div>
         </div>
-      </div>
+        <div class="lg:col-span-1">
+          <div
+            class="bg-white shadow-2xl rounded-2xl p-8 animate-slide-up"
+          >
+            <h2
+              class="text-3xl font-poppins font-bold mb-6 text-warriors-navy border-b-4 border-gold pb-2"
+            >
+              Our Future
+            </h2>
+            <p class="text-lg text-gray-700">
+              The Warriors are poised for continued success with a blend of
+              seasoned veterans and emerging stars. Their focus on innovation and
+              teamwork ensures they remain at the forefront of the NBA.
+            </p>
+            <p class="text-lg text-gray-700 mt-4">
+              As they look to the future, the Warriors remain committed to their
+              legacy of excellence and community impact.
+            </p>
+          </div>
+          <div
+            class="bg-white shadow-2xl rounded-2xl p-8 mt-8 animate-slide-up"
+          >
+            <h2
+              class="text-3xl font-poppins font-bold mb-6 text-warriors-navy border-b-4 border-gold pb-2"
+            >
+              Join Us
+            </h2>
+            <p class="text-lg text-gray-700">
+              Be part of the Warriors' journey. Whether you're a lifelong fan or
+              new to the game, there's a place for you in the Warriors family.
+            </p>
+            <p class="text-lg text-gray-700 mt-4">
+              Follow us on social media and stay updated on the latest news,
+              games, and community events.
+            </p>
+            <div class="mt-6">
+              <a
+                href="roster.html"
+                class="btn btn-primary bg-warriors-navy text-white px-6 py-3 rounded-full hover:bg-gold transition-colors"
+                >Meet the Team</a
+              >
+            </div>
     </main>
     <footer class="bg-gray-900 text-white py-12">
-      <div class="container mx-auto px-4 grid grid-cols-1 md:grid-cols-3 gap-8">
-        <div>
-          <h5 class="font-poppins font-bold text-lg mb-4">
-            <i class="fas fa-basketball-ball mr-2"></i>Warriors Elite
-          </h5>
-          <p class="text-gray-400">
-            Dominating the NBA with skill and heart in 2025.
-          </p>
-        </div>
-        <div>
-          <h5 class="font-poppins font-bold text-lg mb-4">Quick Links</h5>
-          <ul class="list-none space-y-2">
+      <div class="container mx-auto px-4">
+        <div class="flex flex-col lg:flex-row justify-between items-center">
+          <div class="mb-6 lg:mb-0">
+            <h2 class="text-2xl font-bold mb-2">Warriors Elite</h2>
+            <p class="text-sm">© 2025 Warriors Elite. All rights reserved.</p>
+          </div>
+          <ul class="flex space-x-4">
             <li>
-              <a href="index.html" class="text-gray-400 hover:text-gold"
-                ><i class="fas fa-chevron-right mr-2"></i>Home</a
-              >
+              <a
+                href="https://www.facebook.com/warriors/"
+                target="_blank"
+                class="text-white hover:text-gold transition-colors"
+                ><i class="fab fa-facebook-f"></i
+              ></a>
             </li>
             <li>
-              <a href="about.html" class="text-gray-400 hover:text-gold"
-                ><i class="fas fa-chevron-right mr-2"></i>About</a
-              >
+              <a
+                href="https://x.com/warriors?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"
+                target="_blank"
+                class="text-white hover:text-gold transition-colors"
+                ><i class="fab fa-twitter"></i
+              ></a>
             </li>
             <li>
-              <a href="roster.html" class="text-gray-400 hover:text-gold"
-                ><i class="fas fa-chevron-right mr-2"></i>Roster</a
-              >
+              <a
+                href="https://www.instagram.com/warriors/?hl=en"
+                target="_blank"
+                class="text-white hover:text-gold transition-colors"
+                ><i class="fab fa-instagram"></i
+              ></a>
             </li>
           </ul>
         </div>
-        <div>
-          <h5 class="font-poppins font-bold text-lg mb-4">Follow Us</h5>
-          <div class="flex space-x-4">
-            <a href="#" class="text-gray-400 hover:text-gold text-xl"
-              ><i class="fab fa-facebook-f"></i
-            ></a>
-            <a href="#" class="text-gray-400 hover:text-gold text-xl"
-              ><i class="fab fa-twitter"></i
-            ></a>
-            <a href="#" class="text-gray-400 hover:text-gold text-xl"
-              ><i class="fab fa-instagram"></i
-            ></a>
-            <a href="#" class="text-gray-400 hover:text-gold text-xl"
-              ><i class="fab fa-youtube"></i
-            ></a>
-          </div>
-        </div>
-      </div>
-      <hr class="my-8 border-gray-700" />
-      <div class="text-center text-gray-400">
-        © 2025 Warriors Elite Roster Showcase | All Rights Reserved
       </div>
     </footer>
     <!-- Bootstrap JS -->
