--- a/index.html
+++ b/index.html
@@ -356,56 +356,39 @@
 
     <!-- Footer -->
     <footer class="bg-gray-900 text-white py-12">
-      <div class="container mx-auto px-4 grid grid-cols-1 md:grid-cols-3 gap-8">
-        <div>
-          <h5 class="font-poppins font-bold text-lg mb-4">
-            <i class="fas fa-basketball-ball mr-2"></i>Warriors Elite
-          </h5>
-          <p class="text-gray-400">
-            Dominating the NBA with skill and heart in 2025.
-          </p>
-        </div>
-        <div>
-          <h5 class="font-poppins font-bold text-lg mb-4">Quick Links</h5>
-          <ul class="list-none space-y-2">
+      <div class="container mx-auto px-4">
+        <div class="flex flex-col lg:flex-row justify-between items-center">
+          <div class="mb-6 lg:mb-0">
+            <h2 class="text-2xl font-bold mb-2">Warriors Elite</h2>
+            <p class="text-sm">© 2025 Warriors Elite. All rights reserved.</p>
+          </div>
+          <ul class="flex space-x-4">
             <li>
-              <a href="index.html" class="text-gray-400 hover:text-gold"
-                ><i class="fas fa-chevron-right mr-2"></i>Home</a
-              >
+              <a
+                href="https://www.facebook.com/warriors/"
+                target="_blank"
+                class="text-white hover:text-gold transition-colors"
+                ><i class="fab fa-facebook-f"></i
+              ></a>
             </li>
             <li>
-              <a href="about.html" class="text-gray-400 hover:text-gold"
-                ><i class="fas fa-chevron-right mr-2"></i>About</a
-              >
+              <a
+                href="https://x.com/warriors?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"
+                target="_blank"
+                class="text-white hover:text-gold transition-colors"
+                ><i class="fab fa-twitter"></i
+              ></a>
             </li>
             <li>
-              <a href="roster.html" class="text-gray-400 hover:text-gold"
-                ><i class="fas fa-chevron-right mr-2"></i>Roster</a
-              >
+              <a
+                href="https://www.instagram.com/warriors/?hl=en"
+                target="_blank"
+                class="text-white hover:text-gold transition-colors"
+                ><i class="fab fa-instagram"></i
+              ></a>
             </li>
           </ul>
         </div>
-        <div>
-          <h5 class="font-poppins font-bold text-lg mb-4">Follow Us</h5>
-          <div class="flex space-x-4">
-            <a href="#" class="text-gray-400 hover:text-gold text-xl"
-              ><i class="fab fa-facebook-f"></i
-            ></a>
-            <a href="#" class="text-gray-400 hover:text-gold text-xl"
-              ><i class="fab fa-twitter"></i
-            ></a>
-            <a href="#" class="text-gray-400 hover:text-gold text-xl"
-              ><i class="fab fa-instagram"></i
-            ></a>
-            <a href="#" class="text-gray-400 hover:text-gold text-xl"
-              ><i class="fab fa-youtube"></i
-            ></a>
-          </div>
-        </div>
-      </div>
-      <hr class="my-8 border-gray-700" />
-      <div class="text-center text-gray-400">
-        © 2025 Warriors Elite Roster Showcase | All Rights Reserved
       </div>
     </footer>
     <!-- Bootstrap JS -->
