--- a/about.html
+++ b/about.html
@@ -7,16 +7,19 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+
     <!-- Font Awesome -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
+
     <!-- Tailwind CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
       rel="stylesheet"
     />
+
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -24,20 +27,26 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+
     <link rel="stylesheet" href="style.css" />
   </head>
+
   <body>
+    <!-- Header section with navbar and banner -->
     <header class="relative">
+      <!-- Navigation bar -->
       <nav
         class="navbar navbar-expand-lg bg-warriors-navy fixed top-0 w-full z-50 shadow-xl transition-all duration-300"
       >
         <div class="container mx-auto px-4">
+          <!-- Logo -->
           <a
             class="navbar-brand text-gold font-poppins font-extrabold text-2xl flex items-center"
             href="index.html"
           >
             <i class="fas fa-basketball-ball mr-3 text-3xl"></i>Warriors Elite
           </a>
+          <!-- Toggle button for mobile nav -->
           <button
             class="navbar-toggler"
             type="button"
@@ -49,6 +58,7 @@
           >
             <span class="navbar-toggler-icon"></span>
           </button>
+          <!-- Nav links -->
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto space-x-4">
               <li class="nav-item">
@@ -76,6 +86,8 @@
           </div>
         </div>
       </nav>
+
+      <!-- Top banner -->
       <div
         style="background-color: #1c386f"
         class="text-white py-24 text-center"
@@ -90,7 +102,10 @@
         </div>
       </div>
     </header>
+
+    <!-- Main content area -->
     <main class="container mx-auto px-4 py-12">
+      <!-- History section -->
       <section class="mb-12">
         <h2 class="text-3xl font-bold mb-6">Our History</h2>
         <p class="text-lg text-gray-700">
@@ -102,9 +117,16 @@
         <p class="text-lg text-gray-700">
           With a commitment to teamwork, innovation, and community, the Warriors
           have become a symbol of resilience and success in professional sports.
-          </p>
-      <div class="grid grid-cols-1 lg:grid-cols-3 gap-12" style="margin-top: 2em;">
+        </p>
+      </section>
+
+      <!-- Content grid with history, community, future, and CTA -->
+      <div
+        class="grid grid-cols-1 lg:grid-cols-3 gap-12"
+        style="margin-top: 2em"
+      >
         <div class="lg:col-span-2">
+          <!-- Our Journey card -->
           <div
             class="bg-white shadow-2xl rounded-2xl p-8 mb-8 animate-slide-up"
           >
@@ -123,6 +145,8 @@
               Kerr, the Warriors have pioneered the three-point era, securing 7
               NBA titles.
             </p>
+
+            <!-- Achievements and 2025 stats cards -->
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mt-8">
               <div class="bg-gray-50 p-6 rounded-lg shadow">
                 <h3 class="text-xl font-bold text-warriors-navy mb-4">
@@ -131,11 +155,11 @@
                 <ul class="list-none space-y-2">
                   <li>
                     <i class="fas fa-check-circle text-green-500 mr-2"></i>NBA
-                    Champions<br>(1947, 1956, 1975, 2015, 2017, 2018, 2022)
+                    Champions<br />(1947, 1956, 1975, 2015, 2017, 2018, 2022)
                   </li>
                   <li>
                     <i class="fas fa-check-circle text-green-500 mr-2"></i
-                    >Western Conference Leaders<br>(1975, 2015-2019, 2022, 2025)
+                    >Western Conference Leaders<br />(1975, 2015-2019, 2022)
                   </li>
                   <li>
                     <i class="fas fa-check-circle text-green-500 mr-2"></i
@@ -163,10 +187,10 @@
                 </ul>
               </div>
             </div>
-            </div>
-          <div
-            class="bg-white shadow-2xl rounded-2xl p-8 animate-slide-up"
-          >
+          </div>
+
+          <!-- Community section -->
+          <div class="bg-white shadow-2xl rounded-2xl p-8 animate-slide-up">
             <h2
               class="text-3xl font-poppins font-bold mb-6 text-warriors-navy border-b-4 border-gold pb-2"
             >
@@ -183,10 +207,11 @@
             </p>
           </div>
         </div>
+
+        <!-- Side column: Future + Join Us -->
         <div class="lg:col-span-1">
-          <div
-            class="bg-white shadow-2xl rounded-2xl p-8 animate-slide-up"
-          >
+          <!-- Our Future card -->
+          <div class="bg-white shadow-2xl rounded-2xl p-8 animate-slide-up">
             <h2
               class="text-3xl font-poppins font-bold mb-6 text-warriors-navy border-b-4 border-gold pb-2"
             >
@@ -194,14 +219,16 @@
             </h2>
             <p class="text-lg text-gray-700">
               The Warriors are poised for continued success with a blend of
-              seasoned veterans and emerging stars. Their focus on innovation and
-              teamwork ensures they remain at the forefront of the NBA.
+              seasoned veterans and emerging stars. Their focus on innovation
+              and teamwork ensures they remain at the forefront of the NBA.
             </p>
             <p class="text-lg text-gray-700 mt-4">
               As they look to the future, the Warriors remain committed to their
               legacy of excellence and community impact.
             </p>
           </div>
+
+          <!-- Join Us CTA -->
           <div
             class="bg-white shadow-2xl rounded-2xl p-8 mt-8 animate-slide-up"
           >
@@ -225,7 +252,12 @@
                 >Meet the Team</a
               >
             </div>
+          </div>
+        </div>
+      </div>
     </main>
+
+    <!-- Footer with links and social icons -->
     <footer class="bg-gray-900 text-white py-12">
       <div class="container mx-auto px-4">
         <div class="flex flex-col lg:flex-row justify-between items-center">
@@ -233,6 +265,7 @@
             <h2 class="text-2xl font-bold mb-2">Warriors Elite</h2>
             <p class="text-sm">© 2025 Warriors Elite. All rights reserved.</p>
           </div>
+          <!-- Social Media Links -->
           <ul class="flex space-x-4">
             <li>
               <a
@@ -244,7 +277,7 @@
             </li>
             <li>
               <a
-                href="https://x.com/warriors?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"
+                href="https://x.com/warriors"
                 target="_blank"
                 class="text-white hover:text-gold transition-colors"
                 ><i class="fab fa-twitter"></i
@@ -252,7 +285,7 @@
             </li>
             <li>
               <a
-                href="https://www.instagram.com/warriors/?hl=en"
+                href="https://www.instagram.com/warriors/"
                 target="_blank"
                 class="text-white hover:text-gold transition-colors"
                 ><i class="fab fa-instagram"></i
@@ -262,6 +295,7 @@
         </div>
       </div>
     </footer>
+
     <!-- Bootstrap JS -->
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
@@ -273,6 +307,7 @@
       integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
       crossorigin="anonymous"
     ></script>
+
     <script src="js/players.js"></script>
     <script src="js/roster.js"></script>
   </body>
